# promptprocessor

./: LICENSE  README.md  __init__.py  pyproject.toml
.github/: ISSUE_TEMPLATE.md
src/: nodes.py
src/elem2prompt/: elem_trans_prompt.py
src/img2element/: img_trans_elem.py  primary_secendary_rgb_and_richness.py
src/promptprocessor/: nodes.py  prompt_use.py  prompts.py
tests/: __init__.py  test_promptprocessor.py
